tests/fixtures/invalid/list_in_none.py
# Cannot use 'in' with List[int] and None
x: bool = [1, 2, 3] in None
